# Lure

./: .dockerignore  .gitignore  COMPILER_MICROOPTIMIZATIONS.md  Cargo.toml  Dockerfile  Dockerfile.copy  HAPROXY_OPTIMIZATION_ANALYSIS.md  HAPROXY_REDESIGN_PLAN.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_STATUS.md  README.md  perf_tokio.data  perf_uring.data  rust-toolchain.toml  test_backends.sh
.cargo/: config.toml
.github/workflows/: docker.yml  release_pack.yml  rust.yml  windows.yml
docs/: bench_uring_vs_tokio.md  crossplay_backloop.md  crossplay_via_interop.md  tunnel.md
net/: Cargo.toml  build.rs
net/src/: lib.rs
net/src/bedrock/: batch.rs  error.rs  jwt.rs  login.rs  mod.rs  network_settings.rs  varint.rs
net/src/sock/: ebpf.rs  ebpf_kern.c  epoll.c  epoll.rs  mod.rs  tokio.rs  uring.rs
scripts/: release_pack.sh
src/: bedrock_proxy.rs  config.rs  connection.rs  error.rs  inspect.rs  lib.rs  logging.rs  lure.rs  main.rs  metrics.rs  rpc.rs  tunnel.rs  util.rs  utils.rs
src/connection/: connection.rs
src/crossplay/: mod.rs  sidecar.rs  supervisor.rs  token.rs
src/lure/: backend.rs  query.rs
src/lure/backend/: headers.rs
src/packet/: mod.rs
src/router/: attr.rs  dest.rs  endpoint.rs  inspect.rs  mod.rs  profile.rs  query.rs  status.rs
src/sock/: ebpf.rs  epoll.rs  mod.rs  tokio.rs  uring.rs
src/telemetry/: event.rs  inspect.rs  mod.rs  net_observer.rs  oltp.rs  process.rs
src/threat/: mod.rs  ratelimit.rs
src/utils/: mod.rs
tests/: tunnel_integration.rs
tun/: Cargo.toml
tun/src/: lib.rs
