[package]
name = "lure"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.10"
femme = "2.2.1"
log = "0.4.27"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = [
    "tokio",
    "http-proto",
    "reqwest-rustls-webpki-roots",
    "http-json",
] }
dotenvy = "0.15"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = [
    "tokio",
    "tokio-stream",
    "rt-tokio",
    "http",
    "url",
] }
proxy-protocol = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.8"
valence_text = { git = "https://github.com/valence-rs/valence" }
valence_protocol = { git = "https://github.com/valence-rs/valence" }
async-trait = "0.1.88"
futures = "0.3.31"
reqwest = { version = "0.12.20", features = ["stream", "gzip"] }
serde_json = "1.0.140"
governor = "0.10.0"
thiserror = "2.0.12"
mimalloc = { version = "0.1", optional = true }
tonic = { version = "0.13.1", optional = true }
tokio-metrics = "0.4.3"

[features]
# by default we build HTTP-only
default = ["mimalloc", "tokio_unstable"]
# if you want gRPC support, `cargo build --features grpc-tonic`
grpc-tonic = [
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/grpc-tonic",
    "dep:tonic",
]
mimalloc = ["dep:mimalloc"]
tokio_unstable = []
verbose = []

[profile.release]
incremental = true

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
