[package]
name = "lure"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.10"
log = "0.4.27"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tokio", "http-proto", "reqwest-rustls-webpki-roots", "http-json"] }
dotenvy = "0.15"
opentelemetry-stdout = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["tokio", "tokio-stream", "rt-tokio", "http", "url"] }
proxy-protocol = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.9"
valence_text = { git = "https://github.com/valence-rs/valence" }
valence_protocol = { git = "https://github.com/valence-rs/valence" }
async-trait = "0.1"
libc = "0.2"
futures = "0.3"
reqwest = { version = "0.12.20", features = ["stream", "gzip"] }
serde_json = "1.0"
governor = "0.10"
thiserror = "2.0"
mimalloc = { version = "0.1", optional = true }
tonic = { version = "0.14", optional = true }
tokio-metrics = "0.4"
env_logger = "0.11"
fake_serialize = "0.1.1"
console-subscriber = "0.5.0"

[features]
# by default we build HTTP-only
default = ["mimalloc", "tokio_unstable"]
# if you want gRPC support, `cargo build --features grpc-tonic`
grpc-tonic = [
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/grpc-tonic",
    "dep:tonic",
]
mimalloc = ["dep:mimalloc"]
tokio_unstable = []
verbose = []

[profile.release]
incremental = true

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
