[package]
name = "lure"
version = "0.3.2"
edition = "2024"
default-run = "lure"

[workspace.metadata.cargo-shear]
ignored = ["tonic"]

[workspace]
members = ["net"]

[dependencies]
anyhow = "1.0"
bytes = "1.10"
log = "0.4.27"
net = { path = "net" }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tokio", "http-proto", "reqwest-rustls-webpki-roots", "http-json"] }
dotenvy = "0.15"
opentelemetry-stdout = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["tokio", "tokio-stream", "rt-tokio", "http", "url"] }
serde = { version = "1.0", features = ["derive", "rc"] }
# tokio = { version = "1.27", features = ["full", "rt-multi-thread", "tracing"] }
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.9"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["stream", "gzip"] }
serde_json = "1.0"
governor = "0.10"
thiserror = "2.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["std"] }
getrandom = "0.3"
mimalloc = { version = "0.1", optional = true }
tonic = { version = "0.14", optional = true }
tokio-metrics = "0.4"
env_logger = "0.11"
fake_serialize = "0.1"
console-subscriber = "0.5"
tokio-uring = { git = "https://github.com/hUwUtao/tokio-uring.git", version = "0.5.0", features = ["bytes"] }
io-uring = "0.6.0"

[features]
# by default we build HTTP-only
default = ["mimalloc", "tokio_unstable"]
# if you want gRPC support, `cargo build --features grpc-tonic`
grpc-tonic = [
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/grpc-tonic",
    "dep:tonic",
]
mimalloc = ["dep:mimalloc"]
tokio_unstable = []
verbose = []
packet-debug = ["net/packet-debug"]

[profile.release]
incremental = true

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
