[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "tracing"] }
tokio-uring = { git = "https://github.com/hUwUtao/tokio-uring.git", version = "0.5.0", features = ["bytes"] }
io-uring = "0.6.0"

[dev-dependencies]
criterion = "0.5"

[features]
packet-debug = []

[[bench]]
name = "mc"
harness = false

[[bench]]
name = "ha"
harness = false
